fix(CenteredButton): Overflow issue. Refactoring(Footer, Hero, Institutional, Faq)

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,3 +1,3 @@
 $color-primary: #05DF90;
-$color-faq-background: #3a503e;
-$color-faq-header: #2e4a37;
+$color-faq-background: #026943e5;
+$color-faq-header: #026440e5;
